@@ -10677,6 +10677,22 @@ HXQUOTE_LDAPRDN
 \end_layout
 
 \begin_layout Standard
+Specifying an unrecognized type will result in 
+\family typewriter
+NULL
+\family default
+ being returned and 
+\family typewriter
+errno
+\family default
+ be set to 
+\family typewriter
+EINVAL
+\family default
+.
+\end_layout
+
+\begin_layout Standard
 If 
 \family typewriter
 free_me
