@@ -5,6 +5,9 @@ HEAD
 Enhancements:
 - A LD_PRELOAD-able library libHX_rtcheck.so that adds global state correctness
   checks, was added.
+Changes:
+- HX_strquote will return NULL for unknown types now instead of just
+  returning the input pointer
 
 
 v3.10.1 (2011-04-06)
